--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
     "@types/styled-components": "^5.1.1",
+    "babel-plugin-styled-components": "^1.10.7",
     "typescript": "^3.9.7"
   }
 }
